changed app name and fixed weather icon not shown error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather forecasting app",
+  "name": "WeatherForecasting",
   "version": "1.0.0",
   "author": "Shengnan Zhang",
   "private": true,
